--- a/style.css
+++ b/style.css
@@ -4,3 +4,24 @@ body,h1,h2,h3,h4,h5 {
     font-family: "Raleway", sans-serif
     
     }
+
+#vanity{
+    display: block;
+    margin: auto;
+    -webkit-border-top-left-radius: 1px;
+    -webkit-border-top-right-radius: 2px;
+    -webkit-border-bottom-right-radius: 3px;
+    -webkit-border-bottom-left-radius: 4px;
+
+    -moz-border-radius-topleft: 1px;
+    -moz-border-radius-topright: 2px;
+    -moz-border-radius-bottomright: 3px;
+    -moz-border-radius-bottomleft: 4px;
+
+    border-top-left-radius: 1px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 4px; 
+    border-color: black   
+}
+]    
